force-app/main/default/objects/PricingTeam__c/PricingTeam__c.object-meta.xml
<CustomObject>
    <label>Pricing Team</label>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Pricing Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>