force-app/main/default/objects/PricingTeam__c/fields/D_VN_s_Region__c.field-meta.xml
<CustomField>
    <fullName>D_VN_s_Region__c</fullName>
    <formula>Route__r.DVietnamsRegion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D-VN&apos;s Region</label>
    <type>Text</type>
</CustomField>