force-app/main/default/objects/PricingTeam__c/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <formula>Route__r.DestinationCountry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Country</label>
    <type>Text</type>
</CustomField>