force-app/main/default/objects/PricingTeam__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <formula>Route__r.From__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From</label>
    <type>Text</type>
</CustomField>