force-app/main/default/objects/PricingTeam__c/fields/Origin_s_Zone__c.field-meta.xml
<CustomField>
    <fullName>Origin_s_Zone__c</fullName>
    <formula>Route__r.OriginsZone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin&apos;s Zone</label>
    <type>Text</type>
</CustomField>