force-app/main/default/objects/PricingTeam__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <formula>TeamMember__r.LastName  &amp;&quot;&quot;&amp;  TeamMember__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC</label>
    <type>Text</type>
</CustomField>