force-app/main/default/objects/PricingTeam__c/fields/TeamMember__c.field-meta.xml
<CustomField>
    <fullName>TeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only choose Pricing Team Member</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Pricing_Team</relationshipName>
    <type>Lookup</type>
</CustomField>