force-app/main/default/objects/PricingTeam__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <formula>Route__r.To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To</label>
    <type>Text</type>
</CustomField>