force-app/main/default/objects/PricingTeam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TeamMember__c</columns>
    <columns>ServiceType__c</columns>
    <columns>TransportationWay__c</columns>
    <columns>Route__c</columns>
    <columns>OriginCountry__c</columns>
    <columns>From__c</columns>
    <columns>DestinationCountry__c</columns>
    <columns>To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>